# agentboard

./: .env.template  .gitignore  .terraform.lock.hcl  Makefile  README.md  docker-compose.yml  main.tf  package.json  pnpm-lock.yaml  requirements.txt  variables.tf
.github/workflows/: backend.yml  deploy.yml  template.yml
agents/open-interpreter/: .dockerignore  .gitignore  Dockerfile  README.md  e2b.Dockerfile  e2b.toml  requirements.txt  server.py  test_ois_container.py
backend/: .env.template  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  server.py  test_e2b_oi.py
backend/src/: auth.py  e2b_tool.py  open_interpreter.py  settings.py
frontend/: .env.template  README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  middleware.ts  page.tsx
frontend/assets/: main.css
frontend/components/: agent-selector.tsx  anon-shield.tsx  chat-list.tsx  chat-message.tsx  chat-panel.tsx  chat.tsx  empty-screen.tsx  external-link.tsx  feedback.tsx  header.tsx  login-button.tsx  prompt-form.tsx  providers.tsx  user-menu.tsx
frontend/lib/: agents.ts  constants.ts  fonts.ts  utils.ts
frontend/utils/: posthog-server.ts
nextjsapp/: README.md  auth.ts  middle3ware.ts  next.config.js  package.json  pnpm-lock.yaml  supabase.js  tsconfig.json
nextjsapp/app/: actions.ts  layout.tsx  middleware.js  page.tsx
nextjsapp/components/: agent-selector.jsx  chat.tsx  (+13 more)
openai-proxy/: Dockerfile  README.md  docker-compose.yaml  litellm-config.yaml  requirements.txt
sandbox-template/: e2b.Dockerfile  e2b.toml
(+57 files in other folders)
